Fix uwsgi issues for deployment

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,5 +1,7 @@
 [uwsgi]
-module = cifutils.wsgi:application
-master
+module = cifutils.wsgi
+master = true
 processes = 1
-protocol = http
+socket = /tmp/cifutils.sock
+chmod-socket = 666
+vacuum = true
